ghc-6.2/hslibs/win32/Win32Dialogue_stub_ffi.h

extern void* prim_getNextDlgTabItem(HWND arg1,HWND arg2,BOOL arg3);
extern HWND access_prim_getNextDlgTabItem_res1(HsPtr);
extern int access_prim_getNextDlgTabItem_gc_failed(HsPtr);
extern void* access_prim_getNextDlgTabItem_gc_failstring(HsPtr);
extern BOOL prim_isDialogMessage(HWND arg1,MSG * arg2);
extern void* prim_mapDialogRect(HWND arg1,LPRECT arg2);
extern int access_prim_mapDialogRect_gc_failed(HsPtr);
extern void* access_prim_mapDialogRect_gc_failstring(HsPtr);
extern LONG prim_sendDlgItemMessage(HWND arg1,int arg2,DWORD arg3,WPARAM arg4,LPARAM arg5);
extern void* prim_setDlgItemInt(HWND arg1,int arg2,UINT arg3,BOOL arg4);
extern int access_prim_setDlgItemInt_gc_failed(HsPtr);
extern void* access_prim_setDlgItemInt_gc_failstring(HsPtr);
extern void* prim_setDlgItemText(HWND arg1,int arg2,char * arg3);
extern int access_prim_setDlgItemText_gc_failed(HsPtr);
extern void* access_prim_setDlgItemText_gc_failstring(HsPtr);
extern DWORD prim_dS_3DLOOK();
extern DWORD prim_dS_ABSALIGN();
extern DWORD prim_dS_CENTER();
extern DWORD prim_dS_CENTERMOUSE();
extern DWORD prim_dS_CONTEXTHELP();
extern DWORD prim_dS_CONTROL();
extern DWORD prim_dS_FIXEDSYS();
extern DWORD prim_dS_LOCALEDIT();
extern DWORD prim_dS_MODALFRAME();
extern DWORD prim_dS_NOFAILCREATE();
extern DWORD prim_dS_NOIDLEMSG();
extern DWORD prim_dS_SETFONT();
extern DWORD prim_dS_SETFOREGROUND();
extern DWORD prim_dS_SYSMODAL();
extern DWORD prim_dM_GETDEFID();
extern DWORD prim_dM_REPOSITION();
extern DWORD prim_dM_SETDEFID();
extern DWORD prim_wM_CTLCOLORDLG();
extern DWORD prim_wM_CTLCOLORMSGBOX();