ghc-6.2/hslibs/win32/Win32Dialogue.hs


getNextDlgTabItem :: HWND -> HWND -> BOOL -> IO HWND
getNextDlgTabItem arg1 arg2 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg3) ->
  prim_getNextDlgTabItem arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_getNextDlgTabItem_res1 (gc_result :: Addr) >>= \ res1 ->
  access_prim_getNextDlgTabItem_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_getNextDlgTabItem_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (res1))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_getNextDlgTabItem" prim_getNextDlgTabItem :: Addr -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgTabItem_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgTabItem_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_getNextDlgTabItem_gc_failstring :: Addr -> IO (Addr)

isDialogMessage :: HWND -> LPMSG -> IO BOOL
isDialogMessage arg1 arg2 =
  prim_isDialogMessage arg1 arg2
  >>= \  res1  ->
  (unmarshall_bool_ res1) >>= \ gc_res1 ->
  (return (gc_res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_isDialogMessage" prim_isDialogMessage :: Addr -> Addr -> IO (Int)

mapDialogRect :: HWND -> LPRECT -> IO ()
mapDialogRect arg1 arg2 =
  prim_mapDialogRect arg1 arg2
  >>= \ gc_result ->
  access_prim_mapDialogRect_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_mapDialogRect_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_mapDialogRect" prim_mapDialogRect :: Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_mapDialogRect_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_mapDialogRect_gc_failstring :: Addr -> IO (Addr)

-- No MessageBox* funs in here just yet.

sendDlgItemMessage :: HWND -> Int -> WindowMessage -> WPARAM -> LPARAM -> IO LONG
sendDlgItemMessage arg1 arg2 arg3 arg4 arg5 =
  prim_sendDlgItemMessage arg1 arg2 arg3 arg4 arg5
  >>= \  res1  ->
  (return (res1))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_sendDlgItemMessage" prim_sendDlgItemMessage :: Addr -> Int -> Word32 -> Word32 -> Int32 -> IO (Int32)

setDlgItemInt :: HWND -> Int -> UINT -> BOOL -> IO ()
setDlgItemInt arg1 arg2 arg3 gc_arg1 =
  (marshall_bool_ gc_arg1) >>= \ (arg4) ->
  prim_setDlgItemInt arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_setDlgItemInt_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setDlgItemInt_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_setDlgItemInt" prim_setDlgItemInt :: Addr -> Int -> Word32 -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_setDlgItemInt_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_setDlgItemInt_gc_failstring :: Addr -> IO (Addr)

setDlgItemText :: HWND -> Int -> String -> IO ()
setDlgItemText arg1 arg2 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg3) ->
  prim_setDlgItemText arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_setDlgItemText_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_setDlgItemText_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall "Win32Dialogue_stub_ffi.h prim_setDlgItemText" prim_setDlgItemText :: Addr -> Int -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_setDlgItemText_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Dialogue_stub_ffi.h" access_prim_setDlgItemText_gc_failstring :: Addr -> IO (Addr)

foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_3DLOOK" dS_3DLOOK :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_ABSALIGN" dS_ABSALIGN :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_CENTER" dS_CENTER :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_CENTERMOUSE" dS_CENTERMOUSE :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_CONTEXTHELP" dS_CONTEXTHELP :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_CONTROL" dS_CONTROL :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_FIXEDSYS" dS_FIXEDSYS :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_LOCALEDIT" dS_LOCALEDIT :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_MODALFRAME" dS_MODALFRAME :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_NOFAILCREATE" dS_NOFAILCREATE :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_NOIDLEMSG" dS_NOIDLEMSG :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_SETFONT" dS_SETFONT :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_SETFOREGROUND" dS_SETFOREGROUND :: WindowStyle
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dS_SYSMODAL" dS_SYSMODAL :: WindowStyle

foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dM_GETDEFID" dM_GETDEFID :: WindowMessage
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dM_REPOSITION" dM_REPOSITION :: WindowMessage
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_dM_SETDEFID" dM_SETDEFID :: WindowMessage
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_wM_CTLCOLORDLG" wM_CTLCOLORDLG :: WindowMessage
foreign import  ccall unsafe "Win32Dialogue_stub_ffi.h prim_wM_CTLCOLORMSGBOX" wM_CTLCOLORMSGBOX :: WindowMessage

----------------------------------------------------------------
-- End
----------------------------------------------------------------
